v1.4.1: Adapting to Library Changes: v1.11.5